[package]
name = "esetres"
version = "0.1.0"
edition = "2021"
authors = ["Aidan Bleser"]
readme = "README.md"
documentation = "https://github.com/ieedan/esetres"
homepage = "https://github.com/ieedan/esetres"
description = "A self hosted file storage server."
repository = "https://github.com/ieedan/esetres"
keywords = ["file", "storage", "blob", "server"]
license = "BSD 2-Clause License"
license_file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
clap = { version = "4.5.4", features = ["derive"] }
reqwest = "0.12.4"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
