[package]
name = "esetres"
version = "0.1.3"
edition = "2021"
authors = ["Aidan Bleser"]
readme = "README.md"
documentation = "https://github.com/ieedan/esetres"
homepage = "https://github.com/ieedan/esetres"
description = "A self hosted file storage server."
repository = "https://github.com/ieedan/esetres"
keywords = ["file", "storage", "blob", "server"]
license = "BSD-2-Clause"
license_file = "LICENSE"

[[bin]]
name = "esetres"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
bcrypt = "0.15.1"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
dotenvy = "0.15.7"
get_if_addrs = "0.5.3"
jsonwebtoken = "9.3.0"
mime_guess = "2.0.5"
rand = "0.8.5"
reqwest = "0.12.4"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tokio-util = "0.7.12"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors"] }
